Fix visible submenus on page load
- Fix visible submenus on page load

--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -131,6 +131,7 @@
 .nav-submenu {
   width: 240px;
   position: fixed;
+  display: none;
 
   ul {
     width: 100%;
